# SolisControl

./: .gitattributes  .gitignore  INSTALL.txt  LICENSE.txt  MANIFEST.in  README.md  README2.md  config.yaml  pyproject.toml  requirements.txt  setup.py  solis_flux_times.py
docs/: SolisCloud_control_api_command_list.xlsx
scripts/: runcmd.bat
soliscontrol/: __init__.py  main.yaml  solis_common.py  solis_control_async_class.py  solis_control_async_mod.py  solis_control_req_class.py  solis_control_req_mod.py  solis_run.py  solis_s3_logger.py
soliscontrol/old/: solis_control_async_class.py  solis_control_req_class.py
