[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
# See https://packaging.python.org/en/latest/specifications/pyproject-toml/#pyproject-toml-spec
name = "soliscontrol"
version = "1.1.0"
requires-python = ">= 3.8"
description = "Clients for controlling a Solis battery/inverter setup using the Solis Cloud API"
readme = "README.md"
license-files = [ "LICEN[CS]E*" ]